[gd_scene load_steps=105 format=3 uid="uid://c1wlsoy53i0fg"]

[ext_resource type="Script" path="res://Assets/Scripts/game.gd" id="1_mt46x"]
[ext_resource type="Script" path="res://Assets/Scripts/Maincam.gd" id="2_l08fw"]
[ext_resource type="Texture2D" uid="uid://dqhxlve2d7i67" path="res://Assets/Sprites/Background.png" id="3_dkdph"]
[ext_resource type="Texture2D" uid="uid://dftt0hhqvbvsw" path="res://Assets/Sprites/Vending Slots.png" id="4_k68dr"]
[ext_resource type="Texture2D" uid="uid://ccgq3qbu0t3mr" path="res://Assets/Sprites/Foods.png" id="5_i2hhc"]
[ext_resource type="Texture2D" uid="uid://cuxi1u0fi2qii" path="res://Assets/Sprites/Coils.png" id="6_2hg4x"]
[ext_resource type="Texture2D" uid="uid://b7q15qarb1iab" path="res://Assets/Sprites/BlinkyBG.png" id="7_8n2y6"]
[ext_resource type="Texture2D" uid="uid://xx2f7kf71ygk" path="res://Assets/Sprites/TextDisplay.png" id="8_25rtb"]
[ext_resource type="Texture2D" uid="uid://7rnj4f1lxecw" path="res://Assets/Sprites/Vending Output.png" id="9_orixa"]
[ext_resource type="Texture2D" uid="uid://c4eqbsno14mnp" path="res://Assets/Sprites/Vending Base.png" id="10_6bl64"]
[ext_resource type="Texture2D" uid="uid://q8ea5lpy25xp" path="res://Assets/Sprites/Coinslot.png" id="11_5j55u"]
[ext_resource type="PackedScene" uid="uid://bgq76y8hqa1bx" path="res://Assets/Scenes/Prefabs/priceis_text.tscn" id="12_t0exp"]
[ext_resource type="Texture2D" uid="uid://bolf045vtvcid" path="res://Assets/Sprites/BlinkyLetterPanelTransitiontoPriceis.png" id="13_pn3g8"]
[ext_resource type="Script" path="res://Assets/Scripts/PriceisDisplay.gd" id="14_dfa72"]
[ext_resource type="Texture2D" uid="uid://bfb3pm4qd4bmn" path="res://Assets/Sprites/PriceisPanelOpen.png" id="15_cyv5o"]
[ext_resource type="Texture2D" uid="uid://5qcxigr486c0" path="res://Assets/Sprites/PricetagSwap.png" id="16_h5v62"]
[ext_resource type="PackedScene" uid="uid://ofmr1ro5xl1f" path="res://Assets/Scenes/blinky.tscn" id="18_70sqp"]
[ext_resource type="PackedScene" path="res://Assets/Scenes/3x3_numpad.tscn" id="18_s5efe"]
[ext_resource type="PackedScene" uid="uid://k5qmt2y6de7k" path="res://Assets/Scenes/transition_to_mozart.tscn" id="19_bertb"]
[ext_resource type="PackedScene" path="res://Assets/Scenes/mozart.tscn" id="19_c26b1"]
[ext_resource type="Texture2D" uid="uid://ci1turygt840" path="res://Assets/Sprites/PriceistoMozart.png" id="20_q3p8a"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ulrms"]
size = Vector2(150, 20)

[sub_resource type="Animation" id="Animation_rstvs"]
resource_name = "BlinkytoPriceis"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PriceisDisplay:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PriceisDisplay:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 3.6, 4.4, 5.2, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 7, 9, 7]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PriceisTextDisplayBg:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../PriceIs:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Pricetags:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_51hgw"]
_data = {
"BlinkytoPriceis": SubResource("Animation_rstvs")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_e0ksm"]
atlas = ExtResource("13_pn3g8")
region = Rect2(176, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjxtl"]
atlas = ExtResource("13_pn3g8")
region = Rect2(198, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_37s2g"]
atlas = ExtResource("13_pn3g8")
region = Rect2(0, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbm2r"]
atlas = ExtResource("13_pn3g8")
region = Rect2(22, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_0omux"]
atlas = ExtResource("13_pn3g8")
region = Rect2(44, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_lhn5d"]
atlas = ExtResource("13_pn3g8")
region = Rect2(66, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fflm"]
atlas = ExtResource("13_pn3g8")
region = Rect2(88, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_18a76"]
atlas = ExtResource("13_pn3g8")
region = Rect2(110, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctv53"]
atlas = ExtResource("13_pn3g8")
region = Rect2(132, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7xla"]
atlas = ExtResource("13_pn3g8")
region = Rect2(154, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_annmf"]
atlas = ExtResource("13_pn3g8")
region = Rect2(176, 0, 22, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfjnu"]
atlas = ExtResource("13_pn3g8")
region = Rect2(198, 0, 22, 23)

[sub_resource type="SpriteFrames" id="SpriteFrames_hschy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0ksm")
}],
"loop": true,
"name": &"DisplayChips",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjxtl")
}],
"loop": true,
"name": &"DisplayMac",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37s2g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbm2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0omux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lhn5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fflm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18a76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctv53")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7xla")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_annmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfjnu")
}],
"loop": true,
"name": &"Open",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_hnsy2"]
atlas = ExtResource("15_cyv5o")
region = Rect2(0, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_q3l6k"]
atlas = ExtResource("15_cyv5o")
region = Rect2(22, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_ai2jl"]
atlas = ExtResource("15_cyv5o")
region = Rect2(44, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_wtevk"]
atlas = ExtResource("15_cyv5o")
region = Rect2(66, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fiani"]
atlas = ExtResource("15_cyv5o")
region = Rect2(88, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fkqc5"]
atlas = ExtResource("15_cyv5o")
region = Rect2(110, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgnc1"]
atlas = ExtResource("15_cyv5o")
region = Rect2(132, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_edxcq"]
atlas = ExtResource("15_cyv5o")
region = Rect2(154, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ciyg"]
atlas = ExtResource("15_cyv5o")
region = Rect2(176, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_s40nt"]
atlas = ExtResource("15_cyv5o")
region = Rect2(198, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0ack"]
atlas = ExtResource("15_cyv5o")
region = Rect2(220, 0, 22, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmsyk"]
atlas = ExtResource("15_cyv5o")
region = Rect2(242, 0, 22, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_lnjdn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnsy2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q3l6k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ai2jl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtevk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fiani")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fkqc5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgnc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edxcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ciyg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s40nt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0ack")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmsyk")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_8loe6"]
atlas = ExtResource("16_h5v62")
region = Rect2(0, 0, 66, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_vca4m"]
atlas = ExtResource("16_h5v62")
region = Rect2(66, 0, 66, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd8t6"]
atlas = ExtResource("16_h5v62")
region = Rect2(132, 0, 66, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gpw8"]
atlas = ExtResource("16_h5v62")
region = Rect2(198, 0, 66, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_670vd"]
atlas = ExtResource("16_h5v62")
region = Rect2(264, 0, 66, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc0un"]
atlas = ExtResource("16_h5v62")
region = Rect2(330, 0, 66, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjyex"]
atlas = ExtResource("16_h5v62")
region = Rect2(396, 0, 66, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcven"]
atlas = ExtResource("16_h5v62")
region = Rect2(462, 0, 66, 62)

[sub_resource type="SpriteFrames" id="SpriteFrames_nny7d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8loe6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vca4m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd8t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gpw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_670vd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc0un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjyex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcven")
}],
"loop": true,
"name": &"Swap",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tng6x"]
atlas = ExtResource("20_q3p8a")
region = Rect2(0, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrc7u"]
atlas = ExtResource("20_q3p8a")
region = Rect2(22, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_t1jfu"]
atlas = ExtResource("20_q3p8a")
region = Rect2(44, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yq5s"]
atlas = ExtResource("20_q3p8a")
region = Rect2(66, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_3mqrn"]
atlas = ExtResource("20_q3p8a")
region = Rect2(88, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6b18"]
atlas = ExtResource("20_q3p8a")
region = Rect2(110, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdr3x"]
atlas = ExtResource("20_q3p8a")
region = Rect2(132, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_vuejg"]
atlas = ExtResource("20_q3p8a")
region = Rect2(154, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkpmd"]
atlas = ExtResource("20_q3p8a")
region = Rect2(176, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_63ge5"]
atlas = ExtResource("20_q3p8a")
region = Rect2(198, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_b6f35"]
atlas = ExtResource("20_q3p8a")
region = Rect2(220, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_adfa0"]
atlas = ExtResource("20_q3p8a")
region = Rect2(242, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lnw8"]
atlas = ExtResource("20_q3p8a")
region = Rect2(264, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7ip2"]
atlas = ExtResource("20_q3p8a")
region = Rect2(286, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_2efr7"]
atlas = ExtResource("20_q3p8a")
region = Rect2(308, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfrmi"]
atlas = ExtResource("20_q3p8a")
region = Rect2(330, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_x14cp"]
atlas = ExtResource("20_q3p8a")
region = Rect2(352, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_yade2"]
atlas = ExtResource("20_q3p8a")
region = Rect2(374, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovwxp"]
atlas = ExtResource("20_q3p8a")
region = Rect2(396, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_pg4r0"]
atlas = ExtResource("20_q3p8a")
region = Rect2(418, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4rnu"]
atlas = ExtResource("20_q3p8a")
region = Rect2(440, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wcro"]
atlas = ExtResource("20_q3p8a")
region = Rect2(462, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdwgb"]
atlas = ExtResource("20_q3p8a")
region = Rect2(484, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_nq8qa"]
atlas = ExtResource("20_q3p8a")
region = Rect2(506, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_d86m4"]
atlas = ExtResource("20_q3p8a")
region = Rect2(528, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_kfbmr"]
atlas = ExtResource("20_q3p8a")
region = Rect2(550, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlc70"]
atlas = ExtResource("20_q3p8a")
region = Rect2(572, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv4qc"]
atlas = ExtResource("20_q3p8a")
region = Rect2(594, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_1b3qh"]
atlas = ExtResource("20_q3p8a")
region = Rect2(616, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j8pj"]
atlas = ExtResource("20_q3p8a")
region = Rect2(638, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yte0"]
atlas = ExtResource("20_q3p8a")
region = Rect2(660, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_1bflp"]
atlas = ExtResource("20_q3p8a")
region = Rect2(682, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcmuc"]
atlas = ExtResource("20_q3p8a")
region = Rect2(704, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_404wh"]
atlas = ExtResource("20_q3p8a")
region = Rect2(726, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhpir"]
atlas = ExtResource("20_q3p8a")
region = Rect2(748, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_86qjw"]
atlas = ExtResource("20_q3p8a")
region = Rect2(770, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_35ctl"]
atlas = ExtResource("20_q3p8a")
region = Rect2(792, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_x6k4f"]
atlas = ExtResource("20_q3p8a")
region = Rect2(814, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_27vo1"]
atlas = ExtResource("20_q3p8a")
region = Rect2(836, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_lqk46"]
atlas = ExtResource("20_q3p8a")
region = Rect2(858, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_ll5gm"]
atlas = ExtResource("20_q3p8a")
region = Rect2(880, 0, 22, 61)

[sub_resource type="AtlasTexture" id="AtlasTexture_msbam"]
atlas = ExtResource("20_q3p8a")
region = Rect2(902, 0, 22, 61)

[sub_resource type="SpriteFrames" id="SpriteFrames_ku2r0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tng6x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrc7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t1jfu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yq5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3mqrn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6b18")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdr3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vuejg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkpmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_63ge5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b6f35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adfa0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lnw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7ip2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2efr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfrmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x14cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yade2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovwxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pg4r0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4rnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wcro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdwgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nq8qa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d86m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kfbmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlc70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv4qc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1b3qh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j8pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yte0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1bflp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcmuc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_404wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhpir")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86qjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35ctl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x6k4f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27vo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lqk46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ll5gm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_msbam")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_qhl8v"]
resource_name = "PriceisToMozart"
length = 4.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Mozart:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 4.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ekakt"]
_data = {
"PriceisToMozart": SubResource("Animation_qhl8v")
}

[node name="Game" type="Node2D"]
script = ExtResource("1_mt46x")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(9.6, 9.6)
editor_draw_limits = true
script = ExtResource("2_l08fw")
metadata/_edit_lock_ = true

[node name="Upper Cam Collision" type="Area2D" parent="Camera2D"]
position = Vector2(0, -47)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Upper Cam Collision"]
shape = SubResource("RectangleShape2D_ulrms")

[node name="Lower Cam Collision" type="Area2D" parent="Camera2D"]
position = Vector2(0, 46)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Lower Cam Collision"]
position = Vector2(0, 0.25)
shape = SubResource("RectangleShape2D_ulrms")

[node name="Background" type="Sprite2D" parent="."]
z_index = -5
texture = ExtResource("3_dkdph")
metadata/_edit_lock_ = true

[node name="Vending Machine" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Vending Machine"]
z_index = 1
texture = ExtResource("4_k68dr")

[node name="Sprite2D2" type="Sprite2D" parent="Vending Machine"]
z_index = 1
texture = ExtResource("4_k68dr")

[node name="Sprite2D3" type="Sprite2D" parent="Vending Machine"]
z_index = 1
texture = ExtResource("5_i2hhc")

[node name="Sprite2D4" type="Sprite2D" parent="Vending Machine"]
z_index = 1
texture = ExtResource("6_2hg4x")

[node name="Sprite2D5" type="Sprite2D" parent="Vending Machine"]
z_index = 1
texture = ExtResource("7_8n2y6")

[node name="Sprite2D6" type="Sprite2D" parent="Vending Machine"]
z_index = 1
texture = ExtResource("8_25rtb")

[node name="Sprite2D7" type="Sprite2D" parent="Vending Machine"]
z_index = 1
texture = ExtResource("9_orixa")

[node name="Vending Machine Base Texture" type="Sprite2D" parent="Vending Machine"]
texture = ExtResource("10_6bl64")

[node name="Sprite2D8" type="Sprite2D" parent="Vending Machine"]
z_index = 4
texture = ExtResource("11_5j55u")

[node name="PriceIs" parent="." instance=ExtResource("12_t0exp")]
z_index = 4
position = Vector2(19, -30.5)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="PriceIs"]

[node name="BlinkytoPriceis" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="BlinkytoPriceis"]
libraries = {
"": SubResource("AnimationLibrary_51hgw")
}

[node name="PriceisDisplay" type="AnimatedSprite2D" parent="BlinkytoPriceis"]
z_index = 4
position = Vector2(29, -6)
sprite_frames = SubResource("SpriteFrames_hschy")
animation = &"Open"
frame = 7
script = ExtResource("14_dfa72")

[node name="PriceisTextDisplayBg" type="AnimatedSprite2D" parent="BlinkytoPriceis"]
z_index = 3
position = Vector2(29, -27.5)
sprite_frames = SubResource("SpriteFrames_lnjdn")
frame = 11

[node name="Pricetags" type="AnimatedSprite2D" parent="BlinkytoPriceis"]
z_index = 5
position = Vector2(-27, 4.5)
sprite_frames = SubResource("SpriteFrames_nny7d")
animation = &"Swap"
frame = 7

[node name="Numpad" parent="BlinkytoPriceis" instance=ExtResource("18_s5efe")]
z_index = 1
position = Vector2(19, 9)

[node name="Blinky" parent="." instance=ExtResource("18_70sqp")]
z_index = 1
position = Vector2(19, -16)

[node name="Mozart" parent="." instance=ExtResource("19_c26b1")]
z_index = 10
position = Vector2(18, -17.5)

[node name="TransitionToMozart" parent="." instance=ExtResource("19_bertb")]
z_index = 5
position = Vector2(18, -20.5)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="TransitionToMozart"]
sprite_frames = SubResource("SpriteFrames_ku2r0")
frame = 41
centered = false

[node name="AnimationPlayer2" type="AnimationPlayer" parent="TransitionToMozart"]
libraries = {
"": SubResource("AnimationLibrary_ekakt")
}

[connection signal="mouse_entered" from="Camera2D/Upper Cam Collision" to="Camera2D" method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Camera2D/Upper Cam Collision" to="Camera2D" method="_on_area_2d_mouse_exited"]
[connection signal="mouse_entered" from="Camera2D/Lower Cam Collision" to="Camera2D" method="_on_area_2d_2_mouse_entered_negative"]
[connection signal="mouse_exited" from="Camera2D/Lower Cam Collision" to="Camera2D" method="_on_area_2d_2_mouse_exited_negative"]
